site adaptability added

--- a/1.anfal-landing/index.html
+++ b/1.anfal-landing/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Электронная исламская библиотека Anfal</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 <body>
     <header>
@@ -11,10 +13,10 @@
     </header>
 
     <main>
-        <div class="main-flex">
+        <div class="main-flex main-flex-min">
             <section class="main-headline">
                 <h2>ЭЛЕКТРОННАЯ БИБЛИОТЕКА<br> ИСЛАМСКИХ КНИГ</h2>
-                <p>Мы планируем предоставить вам удобный способ <br> чтения книг на мобильных устройствах на iOS и Android.<br> Сервис включает в себя электронную библиотеку с<br> широким выбором книг.</p>
+                <p>Мы планируем предоставить вам удобный способ чтения книг на мобильных устройствах на iOS и Android. Сервис включает в себя электронную библиотеку с широким выбором книг.</p>
 
                 <div class="main-buttons">
                     <a href="#" class="register">помочь проекту</a>
@@ -30,19 +32,18 @@
         <section class="problems">
             <h2 class="line">Что мы имеем сейчас?</h2>
 
-
             <div class="main-flex">
                 <div class="left-blocks">
                     <div class="pdf-block">
                         <img src="img/icons/pdf.svg" alt="pdf">
                         <p class="pdf-block-headline">Отсуствие масштабируемости</p>
-                        <p class="pdf-block-text">Большинство книг, имеющихся сегодня в сети<br> представлены в формате PDF. Он отлично<br> отображает все тексты, но имеет один<br> существенный недостаток - он не масштабируется<br> под экран мобильных устройств.</p>
+                        <p class="pdf-block-text">Большинство книг, имеющихся сегодня в сети представлены в формате PDF. Он отлично отображает все тексты, но имеет один существенный недостаток - он не масштабируется под экран мобильных устройств.</p>
                     </div>
 
                     <div class="book-block">
                         <img src="img/icons/book.svg" alt="book">
                         <p class="book-block-headline">Нет единого каталога книг</p>
-                        <p class="book-block-text">На данный момент в магазинах приложений нет<br> ни одного приложения с каталогом исламской<br>литературы с поиском по категории,  автору и<br> названию.</p>
+                        <p class="book-block-text">На данный момент в магазинах приложений нет ни одного приложения с каталогом исламской литературы с поиском по категории,  автору и названию.</p>
                     </div>
                 </div>
 
@@ -50,23 +51,22 @@
                     <div class="time-block">
                         <img src="img/icons/time-left.svg" alt="time">
                         <p class="time-block-headline">Устаревшие книги</p>
-                        <p class="time-block-text">Издательства постоянно исправляют и дополняют<br> изданные ими книги. Те книги, которые находятся<br> в свободном доступе очень сильно устрели и не<br> содержат внесенных исправлений.</p>
+                        <p class="time-block-text">Издательства постоянно исправляют и дополняют изданные ими книги. Те книги, которые находятся в свободном доступе очень сильно устрели и не содержат внесенных исправлений.</p>
                     </div>
 
                     <div class="money-block">
                         <img src="img/icons/money-bag.svg" alt="money">
                         <p class="money-block-headline">Издательства не получают доход</p>
-                        <p class="money-block-text">Перевод и проверка книг делается<br> профессиональными переводчиками, которым<br> издательства платят деньги. Получение большего<br> дохода издательствами поможет им переводить<br> больше книг. </p>
+                        <p class="money-block-text">Перевод и проверка книг делается профессиональными переводчиками, которым издательства платят деньги. Получение большего дохода издательствами поможет им переводить больше книг. </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="offer">
-            <h2>Что мы предлагаем</h2>
-            <div class="line"><span></span></div>
+       <section class="offer">
+            <h2 class="line">Что мы предлагаем</h2>
 
-            <p  class="offer-text">Библиотека Anfal  - это приложение для чтения с встроенной библиотекой<br> книг и синхронизацией между устройствами.</p>
+            <p  class="offer-text">Библиотека Anfal  - это приложение для чтения с встроенной библиотекой книг и синхронизацией между устройствами.</p>
 
             <div class="features">
                 <div class="left-side-features">
@@ -79,13 +79,13 @@
                     <img src="img/icons/search.svg" alt="search">
                     <div class="features-block">
                         <h3>Большая библиотека книг</h3>
-                        <p>Сотни книг по самым разным темам: акыда,<br> фикх, семейные отношения и многое другое.</p>
+                        <p>Сотни книг по самым разным темам: акыда, фикх, семейные отношения и многое другое.</p>
                     </div>
 
                     <img src="img/icons/book-3.svg" alt="book-3">
                     <div class="features-block">
                         <h3>Подборки книг от редакции</h3>
-                        <p>Наши редакторы выбирают лучшие книги<br> и собирают их в тематические подборки.</p>
+                        <p>Наши редакторы выбирают лучшие книги и собирают их в тематические подборки.</p>
                     </div>
                 </div>
 
@@ -97,34 +97,33 @@
                     <img src="img/icons/ipad.svg" alt="ipad">
                     <div class="features-block">
                         <h3>Читайте на iOS и Android</h3>
-                        <p>Приложение будет доступно как на двух самых<br> популярных платформах - iOS и Android.</p>
+                        <p>Приложение будет доступно как на двух самых популярных платформах - iOS и Android.</p>
                     </div>
 
                     <img src="img/icons/synchronization.svg" alt="synchronization">
                     <div class="features-block">
                         <h3>Синхронизация данных</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit<br> voluptatem accusantium doloremque laudantium.</p>
+                        <p>Все ваши закладки и заметки в книгах синхронизируются между устройствами.</p>
                     </div>
 
                     <img src="img/icons/audiobook.svg" alt="audiobook">
                     <div class="features-block">
                         <h3>Слушайте аудиокниги</h3>
-                        <p>Если нет времени читать - слушайте не отрываясь от дел по<br> дороге на работу или в машине.</p>
+                        <p>Если нет времени читать - слушайте не отрываясь от дел по дороге на работу или в машине.</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="interface">
-            <h2>Интерфейс приложения</h2>
-            <div class="line"><span></span></div>
+            <h2 class="line">Интерфейс приложения</h2>
 
             <div class="interface-screen">
-                <img src="img/icons/screen-1.png" alt="screen-1">
-                <img src="img/icons/screen-2.png" alt="screen-2">
-                <img src="img/icons/screen-3.png" alt="screen-3">
-                <img src="img/icons/screen-4.png" alt="screen-4">
-                <img src="img/icons/screen-5.png" alt="screen-5">
+                <img src="img/icons/screen-1.png" class="screen-1" alt="screen-1">
+                <img src="img/icons/screen-2.png" class="screen-2" alt="screen-2">
+                <img src="img/icons/screen-3.png" class="screen-3" alt="screen-3">
+                <img src="img/icons/screen-4.png" class="screen-4" alt="screen-4">
+                <img src="img/icons/screen-5.png" class="screen-5" alt="screen-5">
             </div>
 
             <div class="interface-button">
@@ -133,15 +132,16 @@
         </section>
 
         <section class="questions">
-            <h2>Остались вопросы?</h2>
-            <div class="line"><span></span></div>
+            <h2 class="line">Остались вопросы?</h2>
 
-            <form class="form-questions">
-                <input type="text" name="name" placeholder="Ваше имя">
-                <input type="text" name="message-subject"  placeholder="Тема сообщения">
-                <input type="email" name="email" placeholder="E-mail">
-                <textarea rows="6" cols="">Текст сообщения</textarea>
-            </form>
+            <div class="form-container">
+                <form class="form-questions">
+                    <input type="text" name="name" placeholder="Ваше имя">
+                    <input type="text" name="message-subject"  placeholder="Тема сообщения">
+                    <input type="email" name="email" placeholder="E-mail">
+                    <textarea rows="6" cols="">Текст сообщения</textarea>
+                </form>
+            </div>
 
             <div class="questions-button">
                 <a href="#" class="submit">отправить</a>
@@ -150,7 +150,7 @@
     </main>
 
     <footer>
-        <div class="line-footer"><span></span></div>
+        <div class="line-footer"></div>
 
         <div class="socials">
             <img src="img/icons/twitter.png" alt="twitter">
