--- a/2.landing-Highdax/index.html
+++ b/2.landing-Highdax/index.html
@@ -109,6 +109,76 @@
 
         <section class="about-us">
             <h2>Something About Us</h2>
+            <div class="circle-numbers">
+                <div class="circle-1">
+                    <span>4235</span>
+                    <p>projects</p>
+                </div>
+                <div class="circle-2">
+                    <span>113</span>
+                    <p>awards</p>
+                </div>
+                <div class="circle-3">
+                    <span>92342</span>
+                    <p>cups of coffee</p>
+                </div>
+                <div class="circle-4">
+                    <span>13</span>
+                    <p>offices across<br> the globe</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="services">
+            <h2>A few reasons why you’ll love Highdax</h2>
+            <p>Highdax is a minimalistic, mobile-optimized theme with responsive layout and retina-ready.</p>
+
+            <div class="services-view">
+                <div class="services-view-up">
+                    <img src="images/settings.svg" alt="settings">
+                    <div class="services-view-settings">
+                        <h3>Strategy Solutions</h3>
+                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
+                    </div>
+
+
+                    <img src="images/compose.svg" alt="compose">
+                    <div class="services-view-compose">
+                        <h3>Clean Modern Code</h3>
+                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
+                    </div>
+
+
+                    <img src="images/grid.svg" alt="grid">
+                    <div class="services-view-grid">
+                        <h3>App Development</h3>
+                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
+                    </div>
+                </div>
+
+                <div class="services-view-down">
+                    <img src="images/cloud.svg" alt="cloud">
+                    <div class="services-view-cloud">
+                        <h3>Web Development</h3>
+                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
+                    </div>
+
+
+                    <img src="images/draft.svg" alt="draft">
+                    <div class="services-view-draft">
+                        <h3>Completely Customizable</h3>
+                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
+                    </div>
+
+                    <img src="images/plus.svg" alt="plus">
+                    <div class="services-view-plus">
+                        <h3>Drag & Drop</h3>
+                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
+                    </div>
+                </div>
+
+
+            </div>
         </section>
     </main>
 
