закончила верстать макет

--- a/2.landing-Highdax/index.html
+++ b/2.landing-Highdax/index.html
@@ -135,21 +135,25 @@
 
             <div class="services-view">
                 <div class="services-view-up">
-                    <img src="images/settings.svg" alt="settings">
+                    <div>
+                        <img src="images/settings.svg" alt="settings">
+                    </div>
                     <div class="services-view-settings">
                         <h3>Strategy Solutions</h3>
                         <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
                     </div>
 
-
-                    <img src="images/compose.svg" alt="compose">
+                    <div>
+                        <img src="images/compose.svg" alt="compose">
+                    </div>
                     <div class="services-view-compose">
                         <h3>Clean Modern Code</h3>
                         <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
                     </div>
 
-
-                    <img src="images/grid.svg" alt="grid">
+                    <div>
+                        <img src="images/grid.svg" alt="grid">
+                    </div>
                     <div class="services-view-grid">
                         <h3>App Development</h3>
                         <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
@@ -157,31 +161,75 @@
                 </div>
 
                 <div class="services-view-down">
-                    <img src="images/cloud.svg" alt="cloud">
+                    <div>
+                        <img src="images/cloud.svg" alt="cloud">
+                    </div>
                     <div class="services-view-cloud">
                         <h3>Web Development</h3>
                         <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
                     </div>
 
-
-                    <img src="images/draft.svg" alt="draft">
+                    <div>
+                        <img src="images/draft.svg" alt="draft">
+                    </div>
                     <div class="services-view-draft">
                         <h3>Completely Customizable</h3>
                         <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
                     </div>
 
-                    <img src="images/plus.svg" alt="plus">
+                    <div>
+                        <img src="images/plus.svg" alt="plus">
+                    </div>
                     <div class="services-view-plus">
                         <h3>Drag & Drop</h3>
                         <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis aliquam. Aliquam in tortor enim.</p>
                     </div>
                 </div>
+            </div>
+        </section>
 
+        <section class="get-started">
+            <h3>easy to use  for everyone</h3>
+            <p>Just drag and drop our premade shortcodes to build your own layout within<br> a minutes.</p>
+            <a href="#">get started</a>
+        </section>
 
+        <section class="macbook">
+            <h3>A few easy steps to create responsive theme</h3>
+            <p>Highdax is a minimalistic, mobile-optimized theme with responsive layout and retina-ready.</p>
+
+            <div class="macbook-content">
+                <div class="macbook-img">
+                    <object type="image/svg+xml" data="images/macbook.svg"></object>
+                </div>
+
+                <div class="tick-img">
+                    <img src="images/tick.svg" alt="tick">
+                    <img src="images/tick.svg" alt="tick">
+                    <img src="images/tick.svg" alt="tick">
+                </div>
+
+                <div class="macbook-text">
+                        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo.</p>
+
+                        <p>Facilis est et expedita distinctio minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+
+                        <p>Temporibus autem cum soluta nobis est eligendi quibusdam et aut officiis debitis autem cum soluta nobis est aut optio cumque nihil.</p>
+                </div>
             </div>
         </section>
     </main>
 
+    <footer>
+        <div class="contact">
+            <p>Don’t lose your time, contact our professional team!</p>
+        </div>
+
+        <div class="icons-footer">
+            <object type="image/svg+xml" data="images/icons.svg"></object>
+            <p>Copyright &copy; 2015 Highdex Design</p>
+        </div>
+    </footer>
 
 </body>
 </html>
