--- a/2.landing-Highdax/index.html
+++ b/2.landing-Highdax/index.html
@@ -87,28 +87,165 @@
                 <div class="container">
                     <h2>Now it is fun to create website</h2>
                     <p>with our massive and ever growing template collection</p>
-                    <div class="portfolio-slider">
+                    <div class="portfolio-slider sl">
                         <div class="portfolio-navigation">
                             <div class="navigation-left-arrow">
                                 <object type="image/svg+xml" data="images/left-arrow.svg"></object>
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-1">
+                        <div class="portfolio-slider-1 sl_slide">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-1.svg"></object>
                             </div>
-                            <div class="portfolio-buttons">
+                            <div class="portfolio-buttons sl_buttons">
                                 <a class="get-for-free-btn" href="#">get for free</a>
                                 <a class="learn-more-btn" href="#">learn more</a>
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-2">
+                        <div class="portfolio-slider-2 sl_slide">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-2.svg"></object>
                             </div>
-                            <div class="portfolio-buttons">
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="learn-more-btn" href="#">get for free</a>
+                                <a class="get-for-free-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-navigation">
+                            <div class="navigation-right-arrow">
+                                <object type="image/svg+xml" data="images/right-arrow.svg"></object>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-slider sl">
+                        <div class="portfolio-navigation">
+                            <div class="navigation-left-arrow">
+                                <object type="image/svg+xml" data="images/left-arrow.svg"></object>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-1 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-1.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="get-for-free-btn" href="#">get for free</a>
+                                <a class="learn-more-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-2 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-2.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="learn-more-btn" href="#">get for free</a>
+                                <a class="get-for-free-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-navigation">
+                            <div class="navigation-right-arrow">
+                                <object type="image/svg+xml" data="images/right-arrow.svg"></object>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-slider sl">
+                        <div class="portfolio-navigation">
+                            <div class="navigation-left-arrow">
+                                <object type="image/svg+xml" data="images/left-arrow.svg"></object>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-1 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-1.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="get-for-free-btn" href="#">get for free</a>
+                                <a class="learn-more-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-2 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-2.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="learn-more-btn" href="#">get for free</a>
+                                <a class="get-for-free-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-navigation">
+                            <div class="navigation-right-arrow">
+                                <object type="image/svg+xml" data="images/right-arrow.svg"></object>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-slider sl">
+                        <div class="portfolio-navigation">
+                            <div class="navigation-left-arrow">
+                                <object type="image/svg+xml" data="images/left-arrow.svg"></object>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-1 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-1.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="get-for-free-btn" href="#">get for free</a>
+                                <a class="learn-more-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-2 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-2.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="learn-more-btn" href="#">get for free</a>
+                                <a class="get-for-free-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-navigation">
+                            <div class="navigation-right-arrow">
+                                <object type="image/svg+xml" data="images/right-arrow.svg"></object>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="portfolio-slider sl">
+                        <div class="portfolio-navigation">
+                            <div class="navigation-left-arrow">
+                                <object type="image/svg+xml" data="images/left-arrow.svg"></object>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-1 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-1.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
+                                <a class="get-for-free-btn" href="#">get for free</a>
+                                <a class="learn-more-btn" href="#">learn more</a>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-slider-2 sl_slide">
+                            <div>
+                                <object type="image/svg+xml" data="images/notebook-2.svg"></object>
+                            </div>
+                            <div class="portfolio-buttons sl_buttons">
                                 <a class="learn-more-btn" href="#">get for free</a>
                                 <a class="get-for-free-btn" href="#">learn more</a>
                             </div>
