--- a/2.landing-Highdax/index.html
+++ b/2.landing-Highdax/index.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-2 sl_slide">
+                        <div class="portfolio-slider-2">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-2.svg"></object>
                             </div>
@@ -138,7 +138,7 @@
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-2 sl_slide">
+                        <div class="portfolio-slider-2">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-2.svg"></object>
                             </div>
@@ -172,7 +172,7 @@
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-2 sl_slide">
+                        <div class="portfolio-slider-2">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-2.svg"></object>
                             </div>
@@ -206,7 +206,7 @@
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-2 sl_slide">
+                        <div class="portfolio-slider-2">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-2.svg"></object>
                             </div>
@@ -241,7 +241,7 @@
                             </div>
                         </div>
 
-                        <div class="portfolio-slider-2 sl_slide">
+                        <div class="portfolio-slider-2">
                             <div>
                                 <object type="image/svg+xml" data="images/notebook-2.svg"></object>
                             </div>
