закончила верстать макет

--- a/1.anfal-landing/index.html
+++ b/1.anfal-landing/index.html
@@ -155,7 +155,7 @@
                 <form class="form-questions">
                     <input type="text" name="name" placeholder="Ваше имя">
                     <input type="text" name="message-subject"  placeholder="Тема сообщения">
-                    <input type="email" name="email" placeholder="E-mail">
+                    <input type="email" name="email" placeholder="E-mail"  pattern=".+@globex.com" >
                     <textarea rows="6" cols="">Текст сообщения</textarea>
                 </form>
             </div>
