--- a/3.sarajevo/index.html
+++ b/3.sarajevo/index.html
@@ -397,7 +397,7 @@
                         </section>
                         <section class="discuss-form">
                             <h2>Say hello!</h2>
-                            <form action="#">
+                            <form action="#" class="form">
                                 <input type="text" name="Name" placeholder="Name">
                                 <input type="email" name="email" placeholder="Email"> 
                                 <textarea cols="30" rows="5" placeholder="Message"></textarea>
