редактирование блока facts

--- a/3.sarajevo/index.html
+++ b/3.sarajevo/index.html
@@ -350,26 +350,28 @@
                 </section>
 
                 <section class="circles">
-                    <section class="clock">
-                        <img src="images/clock.png" alt="clock">
-                        <p class="facts-number">3200</p>
-                        <p class="facts-text">Hours of Work</p>
-                    </section>
-                    <section class="client">
-                        <img src="images/client.png" alt="client">
-                        <p class="facts-number">120</p>
-                        <p class="facts-text">Satisfied Clinets</p>
-                    </section>
-                    <section class="project">
-                        <img src="images/project.png" alt="project">
-                        <p class="facts-number">360</p>
-                        <p class="facts-text">Projects delivered</p>
-                    </section>
-                    <section class="award">
-                        <img src="images/award.png" alt="award">
-                        <p class="facts-number">42</p>
-                        <p class="facts-text">Awards Won</p>
-                    </section>
+					<section class="circles-view">
+						<section class="clock">
+							<i class="far fa-clock fa-2x" aria-hidden="true"></i>
+							<p class="facts-number">3200</p>
+							<p class="facts-text">Hours of Work</p>
+						</section>
+						<section class="client">
+							<i class="fa fa-user fa-2x" aria-hidden="true"></i>
+							<p class="facts-number">120</p>
+							<p class="facts-text">Satisfied Clinets</p>
+						</section>
+						<section class="project">
+							<i class="fa fa-rocket fa-2x" aria-hidden="true"></i>
+							<p class="facts-number">360</p>
+							<p class="facts-text">Projects delivered</p>
+						</section>
+						<section class="award">
+							<i class="fa fa-trophy fa-2x" aria-hidden="true"></i>
+							<p class="facts-number">42</p>
+							<p class="facts-text">Awards Won</p>
+						</section>
+					</section>
                 </section>
             </section>
         </section>
